Fix: #63 Album Skip button - Done, just hit Shift + left/right arrow or Shift + click previous/next button to skip to the previous/next album in the playlist. Quite a bit of refactoring done around locating previous/next albums done as well.

--- a/trunk/skins/classic/musicco.css
+++ b/trunk/skins/classic/musicco.css
@@ -565,3 +565,7 @@ div.shown {
 	background: rgb(245, 206, 84);
 	color: #000000;
 }
+
+#big-jp-previous-album, #big-jp-next-album {
+	display: none;
+}
